--- a/Pablo/css/styles.css
+++ b/Pablo/css/styles.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lora);
+@import url(http://fonts.googleapis.com/css?family=Oswald:700);
 
 html {
 	font-family: sans-serif;
@@ -7,7 +7,7 @@ html {
 body
 {	
 	background-color: #0e0d0d;
-	margin: 0px auto 0 auto;
+	margin: 0 auto 0 auto;
 	width: 80%;
 	text-align: center;
 	font-size: 25px;
@@ -16,8 +16,8 @@ body
 
 h1 {
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
-	color: #bcbaba;
-	font-family: 'Lora', serif;
+	color: #c99e08;
+	font-family: 'Oswald', sans-serif;
 	margin: 0 0 20px 0;
 	padding: 0;
 }
@@ -31,7 +31,7 @@ h1 {
 	-moz-box-shadow:    5px 5px 3px 0px rgba(0, 0, 0, 0.3);
 	box-shadow:         5px 5px 3px 0px rgba(0, 0, 0, 0.3);
 
-	border: 10px solid #000;
+	border: 10px solid #464141;
 	margin: 0 auto 0 auto;
 	width: 800px;
 	height: 512px;
