--- a/Pablo/css/styles.css
+++ b/Pablo/css/styles.css
@@ -6,20 +6,25 @@ html {
 
 body
 {	
+	color: white;
 	background-color: #0e0d0d;
 	margin: 0 auto 0 auto;
 	width: 80%;
-	text-align: center;
+	text-align: left;
 	font-size: 25px;
-	color: white;
+	font-family: 'Oswald', sans-serif;
 }
 
 h1 {
+	text-align: center;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
-	color: #c99e08;
-	font-family: 'Oswald', sans-serif;
+	color: #fff;
 	margin: 0 0 20px 0;
 	padding: 0;
+}
+
+ul {
+	color: gray;
 }
 
 .wrapper {
