--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,9 @@ pre {
     padding-left: 0; }
 
 .wrapper {
+  -webkit-box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.47);
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.47);
   background-color: #fafafa;
   position: relative;
   width: 80%;
@@ -242,7 +245,7 @@ pre {
       padding: 0 10% 0 10%;
       display: inline; }
       .site-header ul li .item-highlight {
-        color: #fafafa; }
+        color: #ed3c3c; }
       .site-header ul li a {
         color: #b5b5b5;
         -webkit-transition: color 200ms ease;
@@ -250,7 +253,7 @@ pre {
         -o-transition: color 200ms ease;
         transition: color 200ms ease; }
         .site-header ul li a:hover {
-          color: #fafafa; }
+          color: #ed3c3c; }
 
 .site-nav {
   position: relative;
