--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Julius+Sans+One|Anonymous+Pro:400,400italic,700,700italic);
+@import url(http://fonts.googleapis.com/css?family=Oxygen:400,300,700|Julius+Sans+One|Cousine:400,700);
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
@@ -60,7 +60,7 @@ blockquote {
 
 pre,
 code {
-  font-family: "Anonymous Pro", monospace;
+  font-family: "Cousine", monospace;
   font-size: 15px;
   border: 1px solid #b5b5b5;
   border-radius: 3px;
@@ -295,6 +295,16 @@ pre {
   margin: 0 auto 0 auto;
   padding-top: 20px;
   padding-bottom: 25px; }
+  .post iframe {
+    display: block;
+    margin: 25px auto 25px auto; }
+  .post img {
+    border: 3px solid #e8e8e8;
+    display: block;
+    margin: 25px auto 25px auto;
+    -webkit-box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.59);
+    -moz-box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.59);
+    box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.59); }
 
 .post-header {
   border-bottom: 1px solid #e8e8e8; }
@@ -329,6 +339,16 @@ pre {
 
 .next {
   margin-left: 30%; }
+
+.disqus-comments {
+  width: 80%;
+  margin: 0 auto 25px auto; }
+
+.float-left {
+  float: left; }
+
+.float-right {
+  float: right; }
 
 .about-img {
   border: 2px solid #1c1c1c;
